<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.johncuffe.crazytipcalc.app.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_text_view"
        android:id="@+id/billtextView"
        android:layout_alignTop="@+id/tipTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billeditText"
        android:ems="5"
        android:layout_marginLeft="29dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/billtextView"
        android:layout_marginTop="36dp"
        android:text="@string/bill_edit_text"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_text_view"
        android:id="@+id/tipTextView"
        android:layout_alignBottom="@+id/billeditText"
        android:layout_toRightOf="@+id/billeditText"
        android:layout_marginLeft="35dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipeditText"
        android:layout_alignTop="@+id/billeditText"
        android:layout_toRightOf="@+id/tipTextView"
        android:layout_marginLeft="36dp"
        android:text="@string/tip_edit_text"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_bill_text_view"
        android:id="@+id/finaltextView"
        android:layout_below="@+id/billeditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalBilleditText"
        android:layout_alignBottom="@+id/finaltextView"
        android:layout_toRightOf="@+id/finaltextView"
        android:layout_marginLeft="29dp"
        android:text="@string/final_bill_edit_text"
        android:inputType="numberDecimal" />

    <SeekBar
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/changetipseekBar"
        android:layout_alignTop="@+id/finalBilleditText"
        android:layout_alignLeft="@+id/tipTextView"
        android:layout_alignStart="@+id/tipTextView"
        android:max="50"
        android:progress="15"
        android:indeterminate="false" />
</RelativeLayout>
